--- a/.github/workflows/platform_natives.yaml
+++ b/.github/workflows/platform_natives.yaml
@@ -213,6 +213,7 @@ jobs:
           SCCACHE_GHA_ENABLED: "on"
       - name: Set up Docker buildx
         uses: docker/setup-buildx-action@v2
+        if: matrix.os == 'ubuntu-22.04'
       - name: Build
         uses: docker/build-push-action@v4
         if: matrix.os == 'ubuntu-22.04'
