--- a/.github/workflows/platform_natives.yaml
+++ b/.github/workflows/platform_natives.yaml
@@ -268,7 +268,7 @@ jobs:
                                                                             -Drevision=$REVISION \
                                                                             -Dclassifier=$TYPE \
                                                                             -Dnative.type.classifier="$TYPE"
-          if [[ "$TYPE" == "linux_amd64_ssl1" ]]; then
+          if [[ "$TYPE" == "linux_amd64_gnu_ssl1" ]]; then
             mvn -B org.apache.maven.plugins:maven-deploy-plugin:3.1.1:deploy-file -Durl=https://mvn.mchv.eu/repository/mchv-snapshot \
                                                                               -DrepositoryId=mchv-snapshot-distribution \
                                                                               -Dfile=natives/.ci-friendly-pom.xml \
@@ -304,7 +304,7 @@ jobs:
                                                                             -Drevision=$REVISION \
                                                                             -Dclassifier=$TYPE \
                                                                             -Dnative.type.classifier="$TYPE"
-          if [[ "$TYPE" == "linux_amd64_ssl1" ]]; then
+          if [[ "$TYPE" == "linux_amd64_gnu_ssl1" ]]; then
             mvn -B org.apache.maven.plugins:maven-deploy-plugin:3.1.1:deploy-file -Durl=https://mvn.mchv.eu/repository/mchv \
                                                                               -DrepositoryId=mchv-release-distribution \
                                                                               -Dfile=natives/.ci-friendly-pom.xml \
