--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "implementations/tdlight"]
-	path = implementations/tdlight
-	url = https://git.ignuranza.net/tdlight-team/tdlight.git
 [submodule "tdlib-serializer"]
 	path = tdlib-serializer
 	url = https://git.ignuranza.net/tdlight-team/tdlib-serializer
+[submodule "implementations/tdlight"]
+	path = implementations/tdlight
+	url = https://git.ignuranza.net/tdlight-team/tdlight
