--- a/.github/workflows/platform_natives.yaml
+++ b/.github/workflows/platform_natives.yaml
@@ -163,7 +163,6 @@ jobs:
             fi
           fi
       - name: Run sccache-cache
-        if: matrix.os != 'windows-2019'
         uses: mozilla-actions/sccache-action@v0.0.3
       - name: Install MSVC
         if: matrix.os == 'windows-2019'
@@ -203,7 +202,7 @@ jobs:
           ./vcpkg/vcpkg install gperf openssl:x64-windows-static zlib:x64-windows-static
         shell: bash
       - name: Build
-        if: matrix.os == 'macos-12'
+        if: matrix.os == 'macos-12' || matrix.os == 'windows-2019'
         shell: bash
         run: |
           set -xeo pipefail
@@ -212,14 +211,6 @@ jobs:
           source ./.github/workflows/scripts/build_${SAFE_TYPE}.sh
         env:
           SCCACHE_GHA_ENABLED: "on"
-      - name: Build
-        if: matrix.os == 'windows-2019'
-        shell: bash
-        run: |
-          set -xeo pipefail
-          echo "REVISION: $REVISION"
-
-          source ./.github/workflows/scripts/build_${SAFE_TYPE}.sh
       - name: Set up Docker buildx
         uses: docker/setup-buildx-action@v2
         if: matrix.os == 'ubuntu-22.04'
