--- a/.github/workflows/tdapi_file.yaml
+++ b/.github/workflows/tdapi_file.yaml
@@ -26,7 +26,12 @@ jobs:
           key: ${{ secrets.IG_SSH_KEY }}
           name: id_rsa
           known_hosts: ${{ secrets.IG_KNOWN_HOSTS }}
-      - uses: actions/checkout@v4
+      - name: Git config
+        shell: bash
+        run: |
+          set -xeo pipefail
+          git config --global http.postBuffer 157286400
+      - uses: actions/checkout@v5
         with:
           submodules: "recursive"
       - name: Setup Java (Snapshot)
